// https://dbdiagram.io/d/chargetime-6581399656d8064ca04919d5



// account.app //
Table Account {
  app account
  id int
  email email
  phone phone
  username varchar
  charge_types id [ref: <> Charge_Type.id]
  balance int
  bonuses int
  first_name varchar
  last_name varchar
  role choice
  avatar img
}
// account.app //



// charge.app //
Table Charge_Type {
  app station
  id int
  name varchar
  power int
}

Table Column {
  app station
  id int
  price int
  charge_type id [ref: - Charge_Type.id]
  status bool
  station id [ref: - Station.id]
}
// charge.app //



// station.app //
Table Station {
  app station
  id int
  description text
  address geo
  name varchar
  schedule richtext
  images id [ref: < Station_Image.id]
  charge_types columns_types
  capacity columns_count
}

Table Station_Image {
  app station
  id int
  image img
  name varchar
}
// station.app //



// feedback.app //
Table Review_Image {
  app station
  id int
  image img
  name varchar
}

Table Review {
  app station
  id int
  rating choice
  body text
  station id [ref: - Station.id]
  images id [ref: < Review_Image.id]
}
// feedback.app //